--- a/src/Frontend/seller-dashboard.html
+++ b/src/Frontend/seller-dashboard.html
@@ -439,26 +439,6 @@
                                 </div>
                             </div>
 
-                            <!-- FLASH SALE OPTION (New) -->
-                            <div class="bg-orange-50 p-4 rounded-lg mb-6 border border-orange-100">
-                                <div class="flex items-center gap-2 mb-3">
-                                    <input type="checkbox" id="isFlashSale" onchange="toggleFlashSaleInputs()"
-                                        class="w-4 h-4 text-orange-600 border-gray-300 rounded focus:ring-orange-500">
-                                    <label for="isFlashSale" class="text-sm font-bold text-gray-800 cursor-pointer">
-                                        <i class="fas fa-bolt text-orange-500 mr-1"></i> Register for Flash Sale
-                                    </label>
-                                </div>
-                                <div id="flashSaleInputs" class="hidden grid grid-cols-1 gap-4">
-                                    <!-- Price removed as per user request -->
-                                    <div>
-                                        <label class="block text-xs font-medium text-gray-700 mb-1">Flash Sale
-                                            Stock</label>
-                                        <input type="number" id="flashSaleStock" min="0"
-                                            class="w-full px-3 py-1.5 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 outline-none text-sm"
-                                            placeholder="Sale Quantity">
-                                    </div>
-                                </div>
-                            </div>
 
                             <!-- VARIATION SECTION -->
                             <div id="variationSection" class="hidden space-y-6">
@@ -1128,18 +1108,6 @@
             }
         }
 
-        // Toggle Flash Sale Inputs
-        function toggleFlashSaleInputs() {
-            const isFlashSale = document.getElementById('isFlashSale').checked;
-            const container = document.getElementById('flashSaleInputs');
-            if (isFlashSale) {
-                container.classList.remove('hidden');
-                document.getElementById('flashSaleStock').setAttribute('required', 'true');
-            } else {
-                container.classList.add('hidden');
-                document.getElementById('flashSaleStock').removeAttribute('required');
-            }
-        }
 
         // 2. TOGGLE VARIATIONS & CHECKBOX LOGIC
         function toggleVariations() {
@@ -1468,9 +1436,7 @@
                 description: document.getElementById('productDescription').value,
                 categoryId: document.getElementById('productCategory').value,
                 images: [mainImageUrl, ...secondaryImageUrls].filter(url => url),
-                isFlashSale: document.getElementById('isFlashSale').checked,
-                flashSalePrice: null, // Removed as per request
-                flashSaleStock: document.getElementById('isFlashSale').checked ? parseInt(document.getElementById('flashSaleStock').value) : null
+                images: [mainImageUrl, ...secondaryImageUrls].filter(url => url)
             };
             const globalPrice = parseFloat(document.getElementById('productPrice').value) || 0;
 
@@ -1715,14 +1681,6 @@
                     secondaryImageUrls = [];
                 }
 
-                if (p.isFlashSale) {
-                    document.getElementById('isFlashSale').checked = true;
-                    toggleFlashSaleInputs(); // Show inputs
-                    document.getElementById('flashSaleStock').value = p.flashSaleStock || 0;
-                } else {
-                    document.getElementById('isFlashSale').checked = false;
-                    toggleFlashSaleInputs(); // Hide inputs
-                }
 
             } catch (err) {
                 console.error(err);
@@ -2273,7 +2231,7 @@
                 </div>`;
 
             try {
-                const apiUrl = `${baseUrl}/products/shop/${currentShop.id}`;
+                const apiUrl = `${baseUrl}/products/shop/${currentShop.id}?includeHidden=true`;
                 console.log('🌐 API URL:', apiUrl);
                 console.log('🔑 Authorization:', `Bearer ${token.substring(0, 20)}...`);
 
@@ -2410,7 +2368,7 @@
                 const categoryText = (p.categories && p.categories.length > 0) ? p.categories[0] : 'N/A';
 
                 return `
-                                <tr class="hover:bg-gray-50 transition">
+                                <tr class="hover:bg-gray-50 transition ${p.status === 'HIDDEN' ? 'bg-gray-50 opacity-75' : ''}">
                                     <td class="px-6 py-4">
                                         <div class="flex items-center gap-3">
                                             <img src="${imageUrl}" class="w-12 h-12 rounded object-cover border">
@@ -2423,11 +2381,20 @@
                                     <td class="px-6 py-4 text-xs font-mono">${categoryText}</td>
                                     <td class="px-6 py-4 font-medium text-orange-600">₫${Number(displayPrice || 0).toLocaleString()}</td>
                                     <td class="px-6 py-4 font-semibold">${totalStock}</td>
-                                    <td class="px-6 py-4"><span class="bg-green-100 text-green-700 text-xs font-bold px-2 py-1 rounded">${p.status || 'ACTIVE'}</span></td>
+                                    <td class="px-6 py-4">
+                                        <span class="px-2 py-1 rounded-full text-xs font-bold ${p.status === 'HIDDEN' ? 'bg-gray-200 text-gray-600' : 'bg-green-100 text-green-700'}">
+                                            ${p.status || 'ACTIVE'}
+                                        </span>
+                                    </td>
                                     <td class="px-6 py-4 text-right">
                                         <div class="flex justify-end gap-2">
+                                            <button onclick="toggleProductVisibility('${p.id || p._id}', '${p.status || 'ACTIVE'}')" 
+                                                class="text-gray-500 hover:text-gray-700 p-2" 
+                                                title="${p.status === 'HIDDEN' ? 'Show Product' : 'Hide Product'}">
+                                                <i class="fas ${p.status === 'HIDDEN' ? 'fa-eye-slash' : 'fa-eye'}"></i>
+                                            </button>
                                             <button onclick="localStorage.setItem('lastClickedProductId', '${p.id || p._id}'); sessionStorage.setItem('lastClickedProductId', '${p.id || p._id}'); window.open('product-detail.html?id=${p.id || p._id}', '_blank')" class="text-gray-500 hover:text-gray-700 p-2" title="View">
-                                                <i class="fas fa-eye"></i>
+                                                <i class="fas fa-external-link-alt"></i>
                                             </button>
                                             <button onclick="localStorage.setItem('lastClickedProductId', '${p.id || p._id}'); editProduct('${p.id || p._id}')" class="text-blue-500 hover:text-blue-700 p-2" title="Edit">
                                                 <i class="fas fa-edit"></i>
@@ -2443,6 +2410,28 @@
                         </tbody>
                     </table>
                 </div>`;
+        }
+
+        async function toggleProductVisibility(productId, currentStatus) {
+            // Toggle logic
+            const newStatus = currentStatus === 'HIDDEN' ? 'ACTIVE' : 'HIDDEN';
+            const action = newStatus === 'HIDDEN' ? 'hide' : 'show';
+
+            if (!confirm(`Are you sure you want to ${action} this product?`)) return;
+
+            try {
+                const response = await fetch(`${baseUrl}/products/${productId}`, {
+                    method: 'PATCH',
+                    headers: { 'Authorization': `Bearer ${token}`, 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ status: newStatus })
+                });
+                if (response.ok) {
+                    showToast(`Product is now ${newStatus}`, 'success');
+                    loadProducts();
+                } else {
+                    showToast('Failed to update status', 'error');
+                }
+            } catch (err) { console.error(err); showToast('Connection error', 'error'); }
         }
 
         async function deleteProduct(productId) {
