--- a/src/Frontend/product-detail.html
+++ b/src/Frontend/product-detail.html
@@ -233,6 +233,7 @@
                     <div class="flex items-center" id="priceContainer">
                         <!-- Price will be populated by JS -->
                     </div>
+                    <div id="flashSaleSoldContainer" class="mt-2 hidden"></div>
                 </div>
 
                 <div id="colorSection" class="mb-6">
@@ -387,7 +388,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
-            console.log("🚀 Initializing Product Page...");
+            console.log("Initializing Product Page...");
 
             // 1. UPDATE NAVBAR FIRST (Sync Header)
             updateNavbar();
@@ -396,7 +397,7 @@
             // 2. GET PRODUCT ID - from ?id=, #id=, /product-detail/ID, or localStorage
             const params = new URLSearchParams(window.location.search);
             let id = params.get('id');
-            const urlHasExplicitId = id !== null; // URL đã có tham số id (kể cả id=undefined)
+            const urlHasExplicitId = id !== null;
 
             if (!id && window.location.hash) {
                 const hashStr = window.location.hash.substring(1);
@@ -404,7 +405,6 @@
                 id = hashParams.get('id');
             }
             if (!id && window.location.pathname) {
-                // Hỗ trợ UUID (có dấu -) trong path: /product-detail/xxx hoặc /product-detail.html/xxx
                 const match = window.location.pathname.match(/\/product-detail(?:\.html)?\/([a-zA-Z0-9\-]+)/);
                 if (match) id = match[1];
             }
@@ -423,7 +423,7 @@
                 }
             }
 
-            // Khôi phục URL nếu ID có trong storage nhưng bị mất do redirect (ví dụ npx serve clean URLs)
+            // Restore URL if ID exists in storage but lost during redirect
             if (id && !params.get('id') && !window.location.hash) {
                 try {
                     history.replaceState({}, '', window.location.pathname + '?id=' + encodeURIComponent(id));
@@ -432,7 +432,7 @@
 
             // 3. CHECK ID EXISTENCE
             if (!id || id === 'null' || id === 'undefined') {
-                console.warn("❌ No Product ID found.");
+                console.warn("No Product ID found.");
                 showErrorState("No product selected. Please go back to Home Page.");
                 return;
             }
@@ -448,20 +448,20 @@
                 if (response.ok) {
                     product = await response.json();
                     isReal = true;
-                    console.log("✅ Fetched from Backend:", product);
+                    console.log("Fetched from Backend:", product);
                 } else {
-                    console.warn(`⚠️ Backend fetch failed (${response.status}), trying Mock...`);
+                    console.warn(`Backend fetch failed (${response.status}), trying Mock...`);
                 }
             } catch (err) {
-                console.error("⚠️ Backend connection error:", err);
+                console.error("Backend connection error:", err);
                 connectionError = true;
             }
 
-            // Fallback to Mock (chỉ với ID 1-6, 101-106)
+            // Fallback to Mock
             if (!product && MOCK_PRODUCTS[id]) {
                 product = MOCK_PRODUCTS[id];
                 product.id = id;
-                console.log("✅ Fetched from Mock:", product);
+                console.log("Fetched from Mock:", product);
             }
 
             // 5. RENDER PRODUCT
@@ -483,10 +483,9 @@
                 <div class='bg-amber-50 p-6 rounded-lg border border-amber-200'>
                     <p class='text-amber-800 mb-3'>${msg}</p>
                     <p class='text-sm text-amber-700 mb-4'>Product may have been deleted, does not exist, or server is not running (localhost:8080).</p>
-                    <a href='index.html' class='inline-block px-4 py-2 bg-orange-500 text-white rounded-lg font-semibold hover:bg-orange-600'>← Back to Home</a>
+                    <a href='index.html' class='inline-block px-4 py-2 bg-orange-500 text-white rounded-lg font-semibold hover:bg-orange-600'>Back to Home</a>
                 </div>`;
             document.getElementById('mainImage').style.display = 'none';
-            // Ẩn phần ratings/sold/color/size/quantity khi không có sản phẩm
             ['ratingSoldRow', 'colorSection', 'sizeSection', 'quantitySection', 'actionButtons'].forEach(rid => {
                 const el = document.getElementById(rid);
                 if (el) el.style.display = 'none';
@@ -550,15 +549,9 @@
                 `).join('');
             }
 
-            // Price & Discount
-            let price = isReal ? (product.variants?.[0]?.price || 0) : product.price;
-            let oldPrice = isReal ? (price * 1.2) : (product.oldPrice || price * 1.2);
+            // Price & Discount handled by updatePriceDisplay()
 
-            document.getElementById('priceContainer').innerHTML = `
-                 <span class="text-gray-400 line-through text-lg mr-3">₫${new Intl.NumberFormat('en-US').format(oldPrice)}</span>
-                 <span class="text-orange-600 text-3xl font-bold mr-3">₫${new Intl.NumberFormat('en-US').format(price)}</span>
-                 <span class="bg-orange-500 text-white px-2 py-1 rounded text-sm font-semibold">SALE</span>
-            `;
+            // Update Stock Display handled in updatePriceDisplay()
 
             // Colors & Sizes
             const colorContainer = document.getElementById('colorContainer');
@@ -596,22 +589,22 @@
             }
 
             // Stock & Sold
-            let stock = isReal ? (product.variants?.reduce((s, v) => s + v.stock, 0) || 0) : (product.stock || 100);
-            document.getElementById('stockCount').textContent = `${stock} available`;
-            // Rating, ReviewCount, Sold - use real data from API
+            let stockVal = isReal ? (product.variants?.reduce((s, v) => s + v.stock, 0) || 0) : (product.stock || 100);
+            if (product.isFlashSale) stockVal = product.flashSaleStock;
+            // NOTE: I used stockVal local variable to avoid confusion with stock (let stock = 0 above)
+
+            // Rating, ReviewCount, Sold
             const rating = (isReal && product.rating != null) ? product.rating.toFixed(1) : (product.rating || '4.9');
             const reviewCount = (isReal && product.reviewCount != null) ? product.reviewCount : (product.reviewCount ?? 0);
             const sold = (isReal && product.sold != null) ? product.sold : (product.sold ?? 0);
             const formatCount = n => (n >= 1000 ? (n / 1000).toFixed(1) + 'k' : String(n));
+
             document.getElementById('ratingValue').textContent = rating;
             document.getElementById('reviewCount').textContent = reviewCount > 0 ? `${formatCount(reviewCount)} Ratings` : '0 Ratings';
             document.getElementById('soldCount').textContent = `${formatCount(sold)} Sold`;
 
-            // Description
             document.getElementById('descContainer').innerHTML = `<p>${isReal ? (product.description || "No description") : product.desc}</p>`;
 
-
-            // Product Specifications (địa giao hàng, số lượng tồn kho, category, SHOP)
             const specsEl = document.getElementById('specsContainer');
             if (specsEl) {
                 const validShopId = shopId && String(shopId) !== 'undefined' && String(shopId) !== 'null';
@@ -624,18 +617,15 @@
 
                 specsEl.innerHTML = `
                     <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Category</span><span class="text-gray-800 font-medium">${catDisplay}</span></div>
-                    <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Stock</span><span class="text-gray-800 font-medium">${stock}</span></div>
+                    <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Stock</span><span class="text-gray-800 font-medium">${stockVal}</span></div>
                     <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Ships From</span><span class="text-gray-800 font-medium">${shopAddress}</span></div>
                     <div class="flex border-b border-gray-200 py-3"><span class="text-gray-600 w-1/3">Sold By</span><a href="${shopHref}" onclick="if(this.getAttribute('data-sid')){sessionStorage.setItem('lastViewedShopId',this.getAttribute('data-sid'));localStorage.setItem('lastViewedShopId',this.getAttribute('data-sid'));}" data-sid="${validShopId ? String(shopId) : ''}" class="text-orange-500 font-bold hover:underline cursor-pointer">${shopName} <i class="fas fa-store ml-1 text-sm"></i></a></div>
                 `;
             }
 
-
-            // Globals
             window.currentProduct = product;
             window.isCurrentReal = isReal;
 
-            // Load reviews (API for real products)
             if (isReal && product.id) {
                 loadProductReviews(product.id);
             } else {
@@ -643,6 +633,9 @@
                 document.getElementById('avgRatingDisplay').textContent = '-';
                 document.getElementById('reviewCountDisplay').textContent = 'No reviews yet';
             }
+
+            // Initialize Price & Timer
+            updatePriceDisplay();
         }
 
         let currentUserId = null;
@@ -870,6 +863,162 @@
             });
             el.classList.add('border-orange-500', 'bg-orange-50');
             el.classList.remove('border-gray-300');
+
+            updatePriceDisplay();
+        }
+
+        function updatePriceDisplay() {
+            const product = window.currentProduct;
+            if (!product) return;
+            const isReal = window.isCurrentReal;
+
+            // Get selected variant
+            const selectedColorBtn = document.querySelector('#colorContainer button.border-orange-500');
+            const selectedSizeBtn = document.querySelector('#sizeContainer button.border-orange-500');
+            const color = selectedColorBtn ? selectedColorBtn.textContent.trim() : '';
+            const size = selectedSizeBtn ? selectedSizeBtn.textContent.trim() : '';
+
+            let price = product.price;
+            let stock = product.stock;
+            let variant = null;
+
+            // Find variant
+            if (isReal && product.variants) {
+                variant = product.variants.find(v =>
+                    (!color || (v.color && v.color.trim().toLowerCase() === color.toLowerCase())) &&
+                    (!size || (v.size && v.size.trim().toLowerCase() === size.toLowerCase()))
+                );
+            }
+
+            // --- PRICING LOGIC ---
+            let isFlashSale = false;
+            let flashSaleEndTime = null;
+            let oldPrice = 0;
+
+            if (variant) {
+                // Variant Selected: Check for Variant Flash Sale FIRST
+                if (variant.isFlashSale) {
+                    isFlashSale = true;
+                    price = variant.flashSalePrice;
+                    stock = variant.flashSaleStock;
+                    flashSaleEndTime = variant.flashSaleEndTime;
+                    oldPrice = variant.price;
+                } else {
+                    price = variant.price;
+                    stock = variant.stock;
+                    oldPrice = price * 1.2;
+                }
+            } else {
+                // No Variant Selected: Fallback to Product Level
+                if (product.isFlashSale) {
+                    isFlashSale = true;
+                    price = product.flashSalePrice;
+                    stock = product.flashSaleStock;
+                    flashSaleEndTime = product.flashSaleEndTime;
+                    // Try to find a reasonable "old price" (min price or explicit price)
+                    oldPrice = product.minPrice || product.price || (price * 1.2);
+                } else if (isReal && product.variants && product.variants.length > 0) {
+                    price = product.minPrice || product.variants[0].price;
+                    stock = product.totalStock || product.stock;
+                    oldPrice = price * 1.2;
+                }
+            }
+
+            // --- RENDER ---
+            // Timer placeholder in badge
+            let badgeHtml = isFlashSale ? `<span class="bg-yellow-400 text-black px-2 py-1 rounded text-sm font-bold ml-3">FLASH SALE <span id="fs-timer" class="ml-1 text-red-600 font-mono inline-block w-[70px] text-center"></span></span>` : (product.isFlashSale ? '' : '<span class="bg-orange-500 text-white px-2 py-1 rounded text-sm font-semibold ml-3">SALE</span>');
+
+            const priceContainer = document.getElementById('priceContainer');
+            if (priceContainer) {
+                priceContainer.innerHTML = `
+                     <span class="text-gray-400 line-through text-lg mr-3">₫${new Intl.NumberFormat('vi-VN').format(oldPrice)}</span>
+                     <span class="text-orange-600 text-3xl font-bold">₫${new Intl.NumberFormat('vi-VN').format(price)}</span>
+                     ${badgeHtml}
+                `;
+            }
+            const stockEl = document.getElementById('stockCount');
+            if (stockEl) stockEl.textContent = `${stock} available`;
+
+            // --- SOLD PROGRESS BAR ---
+            const soldContainer = document.getElementById('flashSaleSoldContainer');
+            if (isFlashSale) {
+                let soldKv = 0;
+                let stockKv = 0;
+
+                if (variant) {
+                    soldKv = variant.flashSaleSold || 0;
+                    stockKv = variant.flashSaleStock || 0;
+                } else {
+                    soldKv = product.flashSaleSold || 0;
+                    stockKv = product.flashSaleStock || 0;
+                }
+
+                // If stockKv is 0, avoid division by zero
+                const total = stockKv > 0 ? stockKv : 1;
+                const percent = Math.min(100, Math.floor((soldKv / total) * 100));
+
+                if (soldContainer) {
+                    soldContainer.innerHTML = `
+                        <div class="flex items-center mt-3 w-full max-w-sm">
+                            <div class="flex-1">
+                                <div class="relative w-full bg-orange-100 h-4 rounded-full overflow-hidden border border-orange-200">
+                                    <div class="bg-gradient-to-r from-orange-500 to-red-600 h-full rounded-full transition-all duration-1000" style="width: ${percent}%"></div>
+                                    <div class="absolute inset-0 flex items-center justify-center">
+                                        <span class="text-[10px] font-bold text-orange-900 uppercase tracking-tighter">ĐÃ BÁN ${soldKv} / ${stockKv}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                    soldContainer.classList.remove('hidden');
+                }
+            } else {
+                if (soldContainer) soldContainer.classList.add('hidden');
+            }
+
+            // --- TIMER ---
+            if (isFlashSale && flashSaleEndTime) {
+                startFlashSaleTimer(flashSaleEndTime);
+            } else {
+                if (window.fsTimerInterval) clearInterval(window.fsTimerInterval);
+            }
+        }
+
+        window.fsTimerInterval = null;
+        function startFlashSaleTimer(endTimeStr) {
+            if (window.fsTimerInterval) clearInterval(window.fsTimerInterval);
+            if (!endTimeStr) return;
+
+            const endTime = new Date(endTimeStr).getTime();
+
+            function update() {
+                const now = Date.now();
+                const diff = endTime - now;
+                if (diff <= 0) {
+                    clearInterval(window.fsTimerInterval);
+                    const el = document.getElementById('fs-timer');
+                    if (el) el.textContent = "ENDED";
+
+                    if (window.currentProduct) {
+                        window.currentProduct.isFlashSale = false;
+                        if (window.currentProduct.variants) {
+                            window.currentProduct.variants.forEach(v => v.isFlashSale = false);
+                        }
+                        updatePriceDisplay();
+                    }
+                    return;
+                }
+
+                const hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+                const seconds = Math.floor((diff % (1000 * 60)) / 1000);
+
+                const formattedTime = `${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+                const el = document.getElementById('fs-timer');
+                if (el) el.textContent = formattedTime;
+            }
+            update();
+            window.fsTimerInterval = setInterval(update, 1000);
         }
 
         // --- CART ACTIONS ---
