--- a/src/Frontend/daily-discover.html
+++ b/src/Frontend/daily-discover.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="flex items-center space-x-4">
-                    <button onclick="window.location.href='cart.html'"
+                    <button onclick="window.location.href='cart-backend.html'"
                         class="relative p-2 hover:bg-orange-700 rounded-full transition mr-2">
                         <i class="fas fa-shopping-cart text-xl text-white"></i>
                         <span id="cartBadge"
